# suno-musical-box

./: .env.example  .gitignore  main.py  pyproject.toml
docs/: limitations.md
sql/: schema.sql
src/: config.py  helpers.py
src/biometrics/: collector_protocol.py  mock_collector.py  models.py
src/core/: audio_player.py  database.py  pipeline.py
src/mapping/: prompt_builder.py
src/music/: models.py  suno_client.py
webapp/: COLMI_BLE_FINDINGS.md  package-lock.json  package.json  tsconfig.json
webapp/app/: layout.tsx  page.tsx
webapp/app/api/generate/: route.ts
webapp/app/api/generate/[taskId]/: route.ts
webapp/app/api/readings/: route.ts
webapp/app/api/sessions/: route.ts
webapp/components/: music-player.tsx  ring-card.tsx  session-panel.tsx
webapp/lib/: biometrics.ts  db.ts  prompt-builder.ts
webapp/lib/ble/: colmi-protocol.ts  ring-manager.ts  signal-processor.ts
